# dio_bank

./: pyproject.toml
instance/: blog.sqlite
migrations/versions/: 8ec2e181645c_add_no_banco.py  fed58862dcdc_add_password_field.py
src/: app.py  db.py  schema.sql  utils.py
src/controlers/: auth.py  post.py  role.py  user.py
