[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "yulia",email = "yuliarodrigues@aluno.unifapce.edu.br"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
