
requires-python = ">=3.10,<4"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.pytest]
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
    
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
